# convex-partition-opt

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  project-roadmap.txt  project-spec.txt  pyproject.toml  spec.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
docs/: index.md
scripts/: hello_jax.py
src/convex_partition/: __init__.py
src/convex_partition/efficient/: __init__.py
src/convex_partition/reference/: __init__.py  geometry.py  geometry_simple.py
tests/: __init__.py  conftest.py  test_reference_geometry.py
tests/artifacts/: .gitkeep
