[project]
name = "convex-partition"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jax[cpu]>=0.4.30",  # Use jax[cuda12] for GPU support
    "jaxtyping>=0.2.25",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "svgwrite>=1.4",
    "beartype>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",  # Parallel test execution
    "ruff>=0.6",
    "pyright>=1.1.370",
    "ipykernel>=6.29",    # For notebooks
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.24",  # Include notebooks in docs
]
ml = [
    "flax>=0.8",          # Neural networks in JAX
    "optax>=0.2",         # Optimizers for JAX
    "orbax-checkpoint>=0.5",  # Checkpointing
    "tensorboardX>=2.6",  # Logging
    "pandas>=2.2",        # Data analysis
    "seaborn>=0.13",      # Statistical plots
]
gpu = [
    "jax[cuda12]>=0.4.30",  # GPU support via CUDA 12
    # Note: May need to set JAX_CUDA_VERSION=12 environment variable
]

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false  # JAX stubs are incomplete

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"